--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
-HELP.md
+gitHELP.md
 target/
-!.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
 
@@ -15,6 +14,7 @@ target/
 
 ### IntelliJ IDEA ###
 .idea
+.mvn
 *.iws
 *.iml
 *.ipr
@@ -29,5 +29,12 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 
-### VS Code ###
-.vscode/
+app/.DS_Store
+app/node_modules
+
+
+
+
+
+
+
