--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ gitHELP.md
 target/
 !**/src/main/**/target/
 !**/src/test/**/target/
+/.mvn/
 
 ### STS ###
 .apt_generated
@@ -14,7 +15,6 @@ target/
 
 ### IntelliJ IDEA ###
 .idea
-.mvn/
 *.iws
 *.iml
 *.ipr
