--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,9 +4,9 @@ server:
 spring:
     datasource:
         driver-class-name: com.mysql.cj.jdbc.Driver
-        url: jdbc:mysql://localhost:3306/demo?serverTimezone=GMT%2b8
+        url: jdbc:mysql://localhost:3306/sys_demo?serverTimezone=GMT%2b8
         username: root
-        password: 1215
+        password: root
 mybatis:
   mapper-locations: classpath:mapper/*.xml # 扫描mybatis的xml文件
   # configuration:
