--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,7 @@ server:
 spring:
     datasource:
         driver-class-name: com.mysql.cj.jdbc.Driver
-        url: jdbc:mysql://localhost:3306/d?serverTimezone=GMT%2b8
+        url: jdbc:mysql://localhost:3306/demo?serverTimezone=GMT%2b8
         username: root
         password: 1215
 mybatis:
