--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,12 @@
 			<version>5.2.2</version>
 		</dependency>
 
+		<!-- 引入jwt-->
+		<dependency>
+			<groupId>com.auth0</groupId>
+			<artifactId>java-jwt</artifactId>
+			<version>4.2.1</version>
+		</dependency>
 	</dependencies>
 
 	<build>
