--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,8 +3,8 @@ server:
     port: 9090
 spring:
     datasource:
-        driver-class-name: com.mysql.cj.jdbc.Driver
-        url: jdbc:mysql://localhost:3306/demo?serverTimezone=GMT%2b8
+        driver-class-name: com.mysql.cj.jdbc.Driver # 47.120.7.37
+        url: jdbc:mysql://47.120.7.37:3306/demo?serverTimezone=GMT%2b8
         username: root
         password: 1215
 mybatis:
